# hodei-audit-trail

./: CLAUDE.md  Cargo.toml  FILE_INDEX.md  LICENSE  PETCLINIC_IMPLEMENTATION.md  PROYECTO_COMPLETADO.md  README.es.md  README.md  docker-compose.dev.yml  justfile
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: backpressure_controller.rs  circuit_breaker.rs  concurrent_operations.rs  connection_pool.rs  smart_batcher_policies.rs  throughput_target.rs  zero_copy_batching.rs
config/vector/: vector.toml
docs/: BUILD-FIX-SUMMARY.md  SIDEBAR-IMPLEMENTATION.md  TEMPLATE-testing-phase.md  USER-GUIDE.md  epic-02-core-service-y-hrn.md  epic-05-multi-tenancy-y-seguridad.md  epic-06-digest-criptografico-y-compliance.md  epic-07-alto-rendimiento-y-escalabilidad.md  epic-08-vector-dev-y-persistencia-avanzada.md  epic-09-observabilidad-y-metricas.md  epic-10-devops-y-despliegue.md
docs/api/: grpc-contracts.md
docs/architecture/: adr-cloudtrail.md  cap-arp-architecture.md  cloudtrail-patterns.md
docs/epics/: epic-01-implementation-plan.md
docs/epics-backend/: README-plan.md  epic-01-fundacion-y-arquitectura.md  epic-02-core-service-y-hrn.md  epic-03-sdk-middleware-y-integracion.md  epic-04-storage-backend-y-clickhouse.md  epic-05-multi-tenancy-y-seguridad.md  epic-07-alto-rendimiento-y-escalabilidad.md  epic-09-observabilidad-y-metricas.md  plan-implementacion-completo.md
docs/epics-web/: README.md  USER_STORIES_STATUS.md  epic-01-project-foundation.md  epic-02-authentication-multitenancy.md  epic-02-implementation-plan.md  epic-03-dashboard-widgets.md  epic-04-event-history-search.md  epic-05-analytics-query-builder.md  epic-06-compliance-reporting.md  epic-07-api-integration-realtime.md  epic-08-testing-quality-assurance.md
docs/investigacion/: aws-iam-rust-clone.md  keycloak-service-domains-analysis.md  rust-iam-clon-investigation.md
examples/: verified-permissions-with-audit.rs
examples/petclinic-app/: Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md  docker-compose.yml
examples/petclinic-app/db/init/: 01-init.sql  02-data.sql
examples/petclinic-app/docs/: DEVELOPER_MANUAL.md
examples/petclinic-app/src/: config.rs  main.rs
examples/petclinic-app/src/application/: mod.rs  services.rs
examples/petclinic-app/src/domain/: entities.rs  mod.rs  repositories.rs  services.rs
examples/petclinic-app/src/infrastructure/: mod.rs  repositories.rs
examples/petclinic-app/src/presentation/: controllers.rs  mod.rs
hodei-audit-proto/: Cargo.toml  build.rs
hodei-audit-proto/proto/: audit_control.proto  audit_crypto.proto  audit_event.proto  audit_query.proto  common.proto  vector_api.proto
hodei-audit-proto/src/: lib.rs
hodei-audit-sdk/: Cargo.toml  README.md
hodei-audit-sdk/src/: batch.rs  client.rs  config.rs  error.rs  hrn.rs  integration_test.rs  lib.rs  middleware.rs  models.rs  types.rs
hodei-audit-service/: Cargo.toml  run_integration_tests.sh
hodei-audit-service/src/: api_key.rs  async_io_optimization.rs  clickhouse.rs  clickhouse_tuning.rs  compliance.rs  crypto.rs  distributed_tracing.rs  enrichment.rs  graceful_shutdown.rs  grafana_dashboards.rs  grpc.rs  grpc_interceptor.rs  health.rs  hrn.rs  integration_tests.rs  integration_tests_epic6.rs  lib.rs  main.rs  metrics.rs  query.rs  quotas.rs  row_level_security.rs  s3_storage.rs  service.rs  storage.rs  structured_logging.rs  tenant.rs  zero_copy_batching.rs
hodei-audit-service/src/crypto/: simple_tests.rs
hodei-audit-service/src/crypto/adapters/: ed25519_signer.rs  in_memory_digest_chain.rs  mod.rs  sha256_hasher.rs
hodei-audit-service/src/crypto/ports/: digest_chain.rs  hashing.rs  mod.rs  signing.rs  tests.rs
hodei-audit-service/src/grpc/: audit_control_server.rs  audit_crypto_server.rs  audit_query_server.rs  vector_api_server.rs
hodei-audit-service/src/key_management/: mod.rs
hodei-audit-service/src/key_management/adapters/: file_key_store.rs  mod.rs  standalone_key_manager.rs  tests.rs
hodei-audit-service/src/key_management/ports/: key_manager.rs  key_store.rs  mod.rs
hodei-audit-service/src/performance/: backpressure.rs  batcher.rs  circuit_breaker.rs  connection_pool.rs  mod.rs  tests.rs
hodei-audit-service/src/tests/: e2e_multitenancy_test.rs  grpc_integration_test.rs  tenant_isolation_test.rs  vector_integration_test.rs
hodei-audit-service/src/vector/: error.rs  metrics.rs  mod.rs  sink_manager.rs  vector_forwarder.rs
hodei-audit-service/src/workers/: digest_worker.rs  mod.rs
hodei-audit-service/src/workers/digest_worker/: tests.rs
hodei-audit-types/: Cargo.toml
hodei-audit-types/src/: hrn.rs  lib.rs
hodei-audit-web/: .env.example  .gitignore  API_QUICK_REFERENCE.md  README.md  TESTING.md  jest.config.js  jest.setup.js  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
hodei-audit-web/docs/screenshots/: README.md
hodei-audit-web/e2e/: analytics.spec.ts  auth.spec.ts  events.spec.ts  navigation.spec.ts
hodei-audit-web/src/__tests__/: business-logic.test.ts  jest.config.test.ts
hodei-audit-web/src/__tests__/integration/: component-integration.test.ts  events-api.test.ts
hodei-audit-web/src/app/: layout.tsx  page.tsx
hodei-audit-web/src/app/analytics/: page.tsx
hodei-audit-web/src/app/compliance/: page.tsx
hodei-audit-web/src/hooks/: use-auth.ts  use-permissions.ts
hodei-audit-web/src/lib/: test-utils.tsx
hodei-audit-web/src/types/: auth.ts  next-auth.d.ts
hodei-audit-web/tests-e2e/: generate-screenshots.ts  smoke.spec.ts
k8s/: deployment.yaml  hpa.yaml  poddisruptionbudget.yaml  service.yaml  vector-daemonset.yaml
scripts/: chaos-test.sh  check-architecture-consistency.sh  load-test-sdk.js  setup-dev.sh  validate-adr.sh  validate-ci-config.sh  validate-cicd-base.sh  validate-cloudtrail-mapping.sh  validate-dev-environment.sh  validate-docs.sh  validate-grpc-contracts.sh  validate-hrn-system.sh  validate-links.sh  validate-project-structure.sh
scripts/dev/: README.md  dev-dashboard.sh  dev-logs.sh  dev-start.sh  dev-status.sh  dev-stop.sh  dev-test.sh  setup-dev-env.sh
(+100 files in other folders)
