[workspace]
members = [
    "hodei-audit-proto",
    "hodei-audit-types",
    "hodei-audit-service",
    "hodei-audit-sdk",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full", "signal"] }
async-trait = "0.1"

# gRPC
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
http = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

# Cryptography (para crypto.rs)
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
signature = "2.0"
hex = "0.4"
rand = "0.9.2"

# LRU Cache
lru = "0.16.2"

# HTTP client
reqwest = { version = "0.12.24", features = ["json", "gzip", "brotli", "deflate"] }

# Testing
rstest = "0.26.1"
tempfile = "3.23.0"

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
