[workspace]
members = [
    "hodei-audit-proto",
    "hodei-audit-types",
    "hodei-audit-service",
    "hodei-audit-sdk",
    "benchmarks",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies - All projects
tokio = { version = "1.48", features = ["full", "signal"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

# gRPC and Protobuf
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
http = "1.0"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
signature = "2.0"
hex = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Storage and caching
lru = "0.12"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Utilities
once_cell = "1.19"

# Testing
rstest = "0.21"
tempfile = "3.12"

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
