[package]
name = "hodei-audit-proto"
version = "0.1.0"
edition = "2021"
description = "Protocol Buffer definitions for Hodei Audit Service"
license = "MIT"

[dependencies]
# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3.0"
