[package]
name = "hodei-audit-proto"
version = "0.1.0"
edition = "2024"
description = "Protocol Buffer definitions for Hodei Audit Service"
license = "MIT"

[dependencies]
# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = { workspace = true }
