[package]
name = "hodei-audit-sdk"
version = "0.1.0"
edition = "2024"
description = "Hodei Audit SDK - Middleware para captura de eventos de auditoría"
license = "MIT"
repository = "https://github.com/your-org/hodei-audit"
keywords = ["audit", "grpc", "sdk", "middleware", "rust"]
categories = ["network-programming", "web-programming"]

[lib]
name = "hodei_audit_sdk"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
async-trait = { workspace = true }

# gRPC client
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# HTTP client for Vector API
reqwest = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
