[package]
name = "hodei-audit-service"
version = "0.1.0"
edition = "2024"
description = "Hodei Audit Service (CAP) - Centralized Audit Point"
license = "MIT"

[dependencies]
# Workspace dependencies
hodei-audit-proto = { path = "../hodei-audit-proto" }
hodei-audit-types = { path = "../hodei-audit-types" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

# LRU Cache
lru = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
