[package]
name = "hodei-audit-service"
version = "0.1.0"
edition = "2024"
description = "Hodei Audit Service (CAP) - Centralized Audit Point"
license = "MIT"

[dependencies]
# Workspace dependencies
hodei-audit-proto = { path = "../hodei-audit-proto" }
hodei-audit-types = { path = "../hodei-audit-types" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client for Vector metrics
reqwest = { version = "0.11", features = ["json", "stream"], default-features = false }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

# LRU Cache
lru = { workspace = true }

[features]
# Enable integration tests with testcontainers
integration-tests = []
# Enable vector metrics
vector-metrics = []
# Enable all vector features
vector = ["vector-metrics"]

[default]
vector = true

[dev-dependencies]
# Enable integration tests with testcontainers
tempfile = { workspace = true }
# Testcontainers for integration tests
testcontainers = "0.25"
# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }
# Async test utilities
tokio-test = "0.4"
# Tracing for tests
tracing-subscriber = { version = "0.3", features = ["fmt"] }
