[package]
name = "hodei-audit-types"
version = "0.1.0"
edition = "2021"
description = "Shared types for Hodei Audit Service"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Tracing
tracing = "0.1"

[dev-dependencies]
rstest = "0.18"
