[package]
name = "hodei-audit-types"
version = "0.1.0"
edition = "2024"
description = "Shared types for Hodei Audit Service"
license = "MIT"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# LRU Cache
lru = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
